增加接口性能测试功能
