# docs/swagger.yaml
@@ -12,6 +12,15 @@ definitions:
       content:
         type: string
     type: object
+  models.PtsParams:
+    properties:
+      count:
+        type: integer
+      secondcount:
+        type: integer
+      url:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -90,4 +99,28 @@ paths:
       summary: 执行树莓派命令
       tags:
       - rpi
+  /v1/pts/run:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Question to be answered
+        in: body
+        name: question
+        required: true
+        schema:
+          $ref: '#/definitions/models.PtsParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      tags:
+      - PTS Run
 swagger: "2.0"
